src/css/main.css
@import url('https://use.typekit.net/ull5rdh.css');


:root {
  --adobeWhite: #f2f2f2;
  --adobeBlack: #737373;
  --adobeLightBlue: #B3C3F2;
  --adobeBlue: #6078BF;
  --adobeDarkBlue: #5872A6;

  --clear: rgba(0, 0, 0, 0);
  --darkGrey: #9d9692;
  --mainBlack: #4e4e4e;
  --blackText: #3c3c3c;
  --mainMcc: #dcdcdc;
  --offWhite: var(--adobeWhite);/*#e9e9e9;*/
  --mainWhite: #fffffe;
  --mainSpacing: 0.0625em;
  --poppy: var(--adobeDarkBlue);  /*#5367a1;/*#1b55a1;*/
  --poppyLow: var(--adobeDarkBlue); /*#4d5580;*/
  --poppyHigh: var(--adobeLightBlue); /*hsl(214 52% 36% / 1);*/
  --poppyDark: var(--adobeDarkBlue); /* hsl(214 71% 37% / 1);*/
  --mainFont: Montserrat,sans-serif;
  --bodyLineHeight: 1.8em;
  --headingLineHeight: 1.4em;
  --bgTransition: background-color 100ms linear;
  --mainTransition: all 0.1s linear;
  --light-shadow: 0 5px 3px rgb(0 0 0 / 10%);
  --dark-shadow: 0 0 4px rgb(0 0 0 / 15%);
  --mainRadius: 1.75rem;
  --errRed: #c74236;
  --hiBlue: rgb(34 180 229);
  --hiYellow: rgb(253 192 24);
}
*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
}
body {
  font-family: var(--mainFont);
  font-kerning: normal;
  font-stretch:ultra-condensed;
  font-style: normal;
  font-size: 1rem;
  font-weight: 400;
  background: var(--mainMcc);
  background-color: var(--mainMcc);
  color: var(--mainBlack);
  display: block;
  line-height: var(--bodyLineHeight);
  margin: 0;
  min-height: 100vh;
  text-decoration: none;
  text-transform: none;
}
::selection {
  background-color: var(--poppy);
  color: var(--offWhite);
}
:focus {
  outline: var(--clear);
}
a {
  color: var(--mainBlack);
  text-decoration: none;
  line-height: 1.5em;
}
a:focus {
  outline: none;
  background: inherit;
  text-decoration: none;
}
a:hover {
  cursor: pointer;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--mainFont);
  font-kerning: normal;
  font-weight: 400;
  color: var(--mainBlack);
  line-height: var(--headingLineHeight);
  margin: 0.5em 0 0.3em;
  margin-top: 0;
  text-transform: capitalize;
}
h1 {
  color: var(--poppyLow);
  letter-spacing: normal;
  font-size: 2.6876em;
  margin: 0.5em auto 0.3em;
  margin-top: 0;
  text-align: center;
}
h2,
h3 {
  color: var(--mainBlack);
  font-size: 2em;
}
hr {
  /* upcoming classes */
  background: rgba(0, 0, 0, 0.1);
  border: none;
  height: 1px;
  margin: 0 auto;
}
input,
textarea,
select{
  font-family: var(--mainFont);
  letter-spacing: normal;
}
input:focus,
textarea:focus,
select:focus,
input:active,
textarea:active,
select:active {
  outline: none;
  outline-color: var(--poppy);
  border: 1px solid var(--poppy);
}
main {
  background: var(--mainWhite);
  background-color: var(--mainWhite);
  border: 0;
  border-radius: var(--mainRadius);
  color: var(--mainBlack);
  margin: 0 auto;
  padding: 0;
  width: 100%;
}
nav {
  color: var(--mainBlack);
  font-size: 1rem;
  letter-spacing: var(--mainSpacing);
  margin: 1.25rem auto 1rem;
  /*padding-block-end: 1.25rem;*/
}
nav * {
  color: var(--mainBlack);
  font-size: 1rem;
  letter-spacing: -0.03em;
  text-transform: uppercase;
  white-space: nowrap;
}
p {
  color: var(--mainBlack);
  /*padding: 0 0 1.8em;*/
  padding-block-end: 1.8em;
  font-size: 1rem;
  font-weight: 400;
  line-height: var(--bodyLineHeight);
  white-space: pre-line;
}
ul {
  list-style: none;
}
li {
  list-style: none;
}
ul[data-bullet-list] {
  color: var(--mainBlack);
  display: block;
  font-style: normal;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.6875em;
  list-style: none;
  /* list-style-position: outside; /* TODO: fix homepage  we say no to */
  margin: 0 1.25rem;
  margin-block-end: .5em;
}
ul[data-bullet-list] > li h3,
ul[data-bullet-list] > li h4,
ul[data-bullet-list] > li p {
  margin: 0.46875rem auto;
  padding: 0 0 0.2rem;
  white-space: pre-line;
  font-weight: 400;
}

ul[data-bullet-list] > li:first-child h3,
ul[data-bullet-list] > li:first-child h4,
ul[data-bullet-list] > li:first-child p {
  padding: 0.4rem 0 0.2rem;
}
ul[data-bullet-list] li > *:first-child::before {
  box-sizing: border-box;
  color: var(--mainBlack);
  content: '\2022';
  display: inline-block;
  margin-left: -40px;
  min-width: 40px;
  padding-right: 10px;
  text-align: right;
  white-space: pre;
}
div#content {
  background: var(--mainWhite);
  border-radius:1.5625rem;
  border-radius: var(--mainRadius);
  max-width: 1150px;
  margin: 2px auto;
  outline: none;
  padding: 0.1em 3.2em;
  white-space: pre-line;
  height: fit-content;
}

button {
  font-family: var(--mainFont);
}
.btn {
  background: var(--mainWhite);
  border: 0.125rem solid var(--poppyLow);
  border-radius: 0.5rem;
  box-shadow: var(--light-shadow);
  color: var(--poppyLow);
  display: inline-block;
  letter-spacing: var(--mainSpacing);
  padding: 0.8rem 1.6rem;
  text-transform: uppercase;
  text-decoration: none;
  transition: var(--mainTransition);
  outline: none;
}
.btn:hover,
.btn:active,
.btn:focus {
  background: var(--mainWhite);
  color: var(--poppyHigh);
  border: 2px solid var(--poppyHigh);
  box-shadow: var(--dark-shadow);
}
.btn:hover {
  cursor: pointer;
}
.btn-form {
  border: 0.125rem solid var(--poppy);
  border-radius: 0.3125rem;
  font-size: 1.25rem;
  font-weight: 600;
  margin-top: 0.75rem;
  padding: 0.95rem 2.05rem;
  transition: background-color 100ms linear;
}

/*
=============== 
Utility classes
===============
*/
.bold {
  font-weight: 600;
}
.italic{
  font-style: italic;
}
.flex {
  display: flex;
}
.poppy {
  color: var(--poppy);
}
.txt-center {
  text-align: center;
}
.w-100 {
  width: 100%;
}
@media screen and (max-width: 320px) {
  div#content {
    border-radius: 10px;
    padding: 0.1rem 0.7rem;
    padding-block: 0.1rem;
    padding-inline: 0.7rem;
  }
  h1 {
    text-align: center;
    margin: unset !important;
    padding: unset !important;
  }
}
@media screen and (min-width: 321px) and (max-width: 480px) {
  div#content {
    border-radius: 15px;
    padding: 0.1rem 1.1rem;
    padding-block: 0.1rem;
    padding-inline: 1.1rem;
  }
}
@media screen and (min-width: 481px) and (max-width: 719px) {
  div#content {
    border-radius:1.5625em;
    padding: 0.1rem 2.2em;
    padding-block: 0.1em;
    padding-inline: 2.2em;
  }
}
@media screen and (min-width: 720px) and (max-width: 1239px) {
  div#content {
    border-radius: 1.5625em;
    padding-block: 0.1em;
    padding-inline: 2.5em;
  }
}
@media screen and (min-width: 1240px) {
  div#content {
    border-radius: var(--mainRadius);
    padding: 0.1rem 3.2rem;
  }
}
.sr-only {
  border: 0;
  position: absolute;
  left: -10000px;
  width: 1px;
  height: 1px;
  top: auto;
  overflow: hidden;
}
p.pb0 {
  padding-bottom: 0px;
}

